removed new-line characters from po

--- a/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
+++ b/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
@@ -170,9 +170,7 @@ msgid ""
 "detailed queries, keywords help narrowing a full text search and they "
 "allow for structured keyword search.\n"
 "The value domain of this metadata element is free text."
-msgstr "Η τιμή της λέξης κλειδί είναι συνήθης λέξη, τυποποιημένη λέξη ή φράση που χρησιμοποιείται για να περιγράφει το αντικείμενο. Ενώ η θεματική κατηγορία είναι πολύ χονδροειδής για λεπτομερή αναζήτηση, οι λέξεις κλειδιά βοηθούν στον περιορισμό της αναζήτησης πλήρους κειμένου και καθιστούν δυνατή τη διαρθρωμένη αναζήτηση λέξεων κλειδιών.
-
-Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων είναι ελεύθερο κείμενο."
+msgstr "Η τιμή της λέξης κλειδί είναι συνήθης λέξη, τυποποιημένη λέξη ή φράση που χρησιμοποιείται για να περιγράφει το αντικείμενο. Ενώ η θεματική κατηγορία είναι πολύ χονδροειδής για λεπτομερή αναζήτηση, οι λέξεις κλειδιά βοηθούν στον περιορισμό της αναζήτησης πλήρους κειμένου και καθιστούν δυνατή τη διαρθρωμένη αναζήτηση λέξεων κλειδιών. Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων είναι ελεύθερο κείμενο."
 
 #: ckanext/publicamundi/lib/metadata/schemata/_common.py:89
 msgid ""
@@ -182,9 +180,7 @@ msgid ""
 "This citation shall include at least the title and a reference date (date"
 " of publication, date of last revision or of creation) of the originating"
 " controlled vocabulary."
-msgstr "Εάν η τιμή της λέξης κλειδί προέρχεται από ελεγχόμενο λεξιλόγιο (θησαυρός όρων, Οντολογία), για παράδειγμα από τον GEMET, περιλαμβάνεται μνεία του ελεγχόμενου λεξιλογίου προέλευσης.
-
-Στη μνεία περιλαμβάνεται τουλάχιστον ο τίτλος και η ημερομηνία αναφοράς (ημερομηνία δημοσίευσης, ημερομηνία τελευταίας αναθεώρησης ή δημιουργίας) του ελεγχόμενου λεξιλογίου προέλευσης."
+msgstr "Εάν η τιμή της λέξης κλειδί προέρχεται από ελεγχόμενο λεξιλόγιο (θησαυρός όρων, Οντολογία), για παράδειγμα από τον GEMET, περιλαμβάνεται μνεία του ελεγχόμενου λεξιλογίου προέλευσης. Στη μνεία περιλαμβάνεται τουλάχιστον ο τίτλος και η ημερομηνία αναφοράς (ημερομηνία δημοσίευσης, ημερομηνία τελευταίας αναθεώρησης ή δημιουργίας) του ελεγχόμενου λεξιλογίου προέλευσης."
 
 #: ckanext/publicamundi/lib/metadata/schemata/_common.py:93
 msgid "Reference date"
@@ -337,9 +333,7 @@ msgstr "Ημερομηνία Μεταδεδομένων"
 msgid ""
 "The date which specifies when the metadata record was created or updated."
 " This date shall be expressed in conformity with ISO 8601."
-msgstr "Η ημερομηνία που προσδιορίζει πότε δημιουργήθηκε ή ενημερώθηκε η εγγραφή των μεταδεδομένων.
-
-Η ημερομηνία αυτή εκφράζεται σύμφωνα με το πρότυπο ISO 8601."
+msgstr "Η ημερομηνία που προσδιορίζει πότε δημιουργήθηκε ή ενημερώθηκε η εγγραφή των μεταδεδομένων. Η ημερομηνία αυτή εκφράζεται σύμφωνα με το πρότυπο ISO 8601."
 
 #: ckanext/publicamundi/lib/metadata/schemata/inspire_metadata.py:40
 msgid "Metadata Language"
@@ -350,9 +344,7 @@ msgid ""
 "This is the language in which the metadata elements are expressed. The "
 "value domain of this metadata element is limited to the official "
 "languages of the Community expressed in conformity with ISO 639-2."
-msgstr "Η γλώσσα που διατυπώνονται τα στοιχεία μεταδεδομένων.
-
-Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων περιορίζεται στις επίσημες γλώσσες της Κοινότητας και εκφράζεται σύμφωνα με το πρότυπο ISO 639-2."
+msgstr "Η γλώσσα που διατυπώνονται τα στοιχεία μεταδεδομένων. Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων περιορίζεται στις επίσημες γλώσσες της Κοινότητας και εκφράζεται σύμφωνα με το πρότυπο ISO 639-2."
 
 #: ckanext/publicamundi/lib/metadata/schemata/inspire_metadata.py:49
 #: ckanext/publicamundi/templates/user/snippets/filter_bar.html:34
@@ -382,9 +374,7 @@ msgid ""
 "metadata element is a mandatory character string code, generally assigned"
 " by the data owner, and a character string namespace uniquely identifying"
 " the context of the identifier code (for example, the data owner)."
-msgstr "Τιμή για τη μονοσήμαντη ταυτοποίηση του πόρου.
-
-Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων είναι υποχρεωτικός κωδικός υπό μορφή σειράς χαρακτήρων, κατά κανόνα οριζόμενος από τον κάτοχο των δεδομένων, και χώρος ονομάτων υπό μορφή σειράς χαρακτήρων που προσδιορίζει μονοσήμαντα το συγκείμενο του κωδικού αναγνώρισης (για παράδειγμα, ο κάτοχος των δεδομένων)."
+msgstr "Τιμή για τη μονοσήμαντη ταυτοποίηση του πόρου. Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων είναι υποχρεωτικός κωδικός υπό μορφή σειράς χαρακτήρων, κατά κανόνα οριζόμενος από τον κάτοχο των δεδομένων, και χώρος ονομάτων υπό μορφή σειράς χαρακτήρων που προσδιορίζει μονοσήμαντα το συγκείμενο του κωδικού αναγνώρισης (για παράδειγμα, ο κάτοχος των δεδομένων)."
 
 #: ckanext/publicamundi/lib/metadata/schemata/inspire_metadata.py:67
 msgid "Resource Abstract"
@@ -404,9 +394,7 @@ msgid ""
 "to additional information about the resource. The value domain of this "
 "metadata element is a character string, commonly expressed as uniform "
 "resource locator (URL)."
-msgstr "Ο εντοπιστής πόρου ορίζει τον σύνδεσμο (τους συνδέσμους) με τον πόρο ή/και το σύνδεσμο με συμπληρωματικές πληροφορίες που αφορούν τον πόρο.
-
-Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων είναι σειρά χαρακτήρων, που κατά κανόνα εκφράζεται ως Ενιαίος Εντοπιστής Πόρου (Uniform Resource Locator, URL)."
+msgstr "Ο εντοπιστής πόρου ορίζει τον σύνδεσμο (τους συνδέσμους) με τον πόρο ή/και το σύνδεσμο με συμπληρωματικές πληροφορίες που αφορούν τον πόρο. Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων είναι σειρά χαρακτήρων, που κατά κανόνα εκφράζεται ως Ενιαίος Εντοπιστής Πόρου (Uniform Resource Locator, URL)."
 
 #: ckanext/publicamundi/lib/metadata/schemata/inspire_metadata.py:80
 msgid "Linkage"
@@ -420,9 +408,7 @@ msgstr "Γλώσσες Πόρου"
 msgid ""
 "The language(s) used within the resource. The value domain of this "
 "metadata element is limited to the languages defined in ISO 639-2."
-msgstr "Η γλώσσα ή οι γλώσσες που χρησιμοποιούνται εντός του πόρου.
-
-Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων περιορίζεται στις γλώσσες που ορίζονται στο διεθνές πρότυπο ISO 639-2."
+msgstr "Η γλώσσα ή οι γλώσσες που χρησιμοποιούνται εντός του πόρου. Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων περιορίζεται στις γλώσσες που ορίζονται στο διεθνές πρότυπο ISO 639-2."
 
 #: ckanext/publicamundi/lib/metadata/schemata/inspire_metadata.py:89
 msgid "Resource Language"
@@ -437,9 +423,7 @@ msgid ""
 "The topic category is a high-level classification scheme to assist in the"
 " grouping and topic-based search of available spatial data resources. The"
 " value domain of this metadata element is defined in Part D.2."
-msgstr "Η θεματική κατηγορία είναι υψηλού επιπέδου σχήμα κατηγοριοποίησης που βοηθά στην ομαδοποίηση και την θεματοκεντρική αναζήτηση διαθέσιμων πόρων χωρικών δεδομένων.
-
-Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων ορίζεται στο μέρος Δ παράγραφος 2."
+msgstr "Η θεματική κατηγορία είναι υψηλού επιπέδου σχήμα κατηγοριοποίησης που βοηθά στην ομαδοποίηση και την θεματοκεντρική αναζήτηση διαθέσιμων πόρων χωρικών δεδομένων. Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων ορίζεται στο μέρος Δ παράγραφος 2."
 
 #: ckanext/publicamundi/lib/metadata/schemata/inspire_metadata.py:101
 #: ckanext/publicamundi/lib/metadata/widgets/objects/inspire.py:115
@@ -488,9 +472,7 @@ msgid ""
 "bounding box. The bounding box shall be expressed with westbound and "
 "eastbound longitudes, and southbound and northbound latitudes in decimal "
 "degrees, with a precision of at least two decimals."
-msgstr "Πρόκειται για την έκταση του πόρου στο γεωγραφικό χώρο, που δίδεται ως περιβάλλον κουτί.
-
-Το περίγραμμα γεωγραφικών συντεταγμένων εκφράζεται σε δυτικό και ανατολικό γεωγραφικό μήκος και σε βόρειο και νότιο γεωγραφικό πλάτος, σε δεκαδικές μοίρες, με ακρίβεια τουλάχιστον δύο δεκαδικών ψηφίων."
+msgstr "Πρόκειται για την έκταση του πόρου στο γεωγραφικό χώρο, που δίδεται ως περιβάλλον κουτί. Το περίγραμμα γεωγραφικών συντεταγμένων εκφράζεται σε δυτικό και ανατολικό γεωγραφικό μήκος και σε βόρειο και νότιο γεωγραφικό πλάτος, σε δεκαδικές μοίρες, με ακρίβεια τουλάχιστον δύο δεκαδικών ψηφίων."
 
 #: ckanext/publicamundi/lib/metadata/schemata/inspire_metadata.py:146
 #: ckanext/publicamundi/templates/package/snippets/objects/edit-geographic_bbox-item.html:3
@@ -599,8 +581,7 @@ msgid ""
 "shall be used. This element shall also provide information on any fees "
 "necessary to access and use the resource, if applicable, or refer to a "
 "uniform resource locator (URL) where information on fees is available."
-msgstr "Αυτό το στοιχείο μεταδεδομένων ορίζει τους όρους για την πρόσβαση σε σύνολα και υπηρεσίες χωρικών δεδομένων και τη χρήση τους και, κατά περίπτωση, τα αντίστοιχα τέλη, όπως απαιτείται κατά το άρθρο 5 παράγραφος 2 στοιχείο β) και το άρθρο 11 παράγραφος 2 στοιχείο στ) της οδηγίας 2007/2/ΕΚ. Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων είναι ελεύθερο κείμενο. 
-Στο στοιχείο αυτό πρέπει να αναφέρονται τιμές. Εάν δεν ισχύουν όροι για την πρόσβαση και χρήση του πόρου, δηλώνεται 'δεν ισχύουν όροι'. Εάν οι όροι δεν είναι γνωστοί, δηλώνεται 'άγνωστοι όροι'. Εξάλλου, στο στοιχείο αυτό παρέχονται πληροφορίες σχετικά με τυχόν τέλη που απαιτούνται για την πρόσβαση στον πόρο και τη χρήση του, κατά περίπτωση, ή γίνεται παραπομπή σε Ενιαίο Εντοπιστή Πόρου (Uniform Resource Locator, URL) όπου παρέχονται πληροφορίες σχετικά με τα τέλη."
+msgstr "Αυτό το στοιχείο μεταδεδομένων ορίζει τους όρους για την πρόσβαση σε σύνολα και υπηρεσίες χωρικών δεδομένων και τη χρήση τους και, κατά περίπτωση, τα αντίστοιχα τέλη, όπως απαιτείται κατά το άρθρο 5 παράγραφος 2 στοιχείο β) και το άρθρο 11 παράγραφος 2 στοιχείο στ) της οδηγίας 2007/2/ΕΚ. Το πεδίο τιμών αυτού του στοιχείου μεταδεδομένων είναι ελεύθερο κείμενο. Στο στοιχείο αυτό πρέπει να αναφέρονται τιμές. Εάν δεν ισχύουν όροι για την πρόσβαση και χρήση του πόρου, δηλώνεται 'δεν ισχύουν όροι'. Εάν οι όροι δεν είναι γνωστοί, δηλώνεται 'άγνωστοι όροι'. Εξάλλου, στο στοιχείο αυτό παρέχονται πληροφορίες σχετικά με τυχόν τέλη που απαιτούνται για την πρόσβαση στον πόρο και τη χρήση του, κατά περίπτωση, ή γίνεται παραπομπή σε Ενιαίο Εντοπιστή Πόρου (Uniform Resource Locator, URL) όπου παρέχονται πληροφορίες σχετικά με τα τέλη."
 
 #: ckanext/publicamundi/lib/metadata/schemata/inspire_metadata.py:238
 msgid "Condition"
