added greek translation

--- a/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
+++ b/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
@@ -655,7 +655,7 @@ msgid ""
 "reference date (date of publication, date of last revision or of "
 "creation) of the implementing rules adopted under Article 7(1) of "
 "Directive 2007/2/EC or of the specification."
-msgstr ""
+msgstr "Πρόκειται για μνεία των εκτελεστικών διατάξεων που θεσπίζονται με το άρθρο 7 παράγραφος 1 της οδηγίας 2007/2/ΕΚ ή άλλης προδιαγραφής την οποία πληροί συγκεκριμένος πόρος. Ο πόρος είναι δυνατόν να πληροί περισσότερες της μιας εκτελεστικές διατάξεις που θεσπίζονται με το άρθρο 7 παράγραφος 1 της οδηγίας 2007/2/ΕΚ ή άλλη προδιαγραφή. Η μνεία αυτή περιλαμβάνει τουλάχιστον τον τίτλο και την ημερομηνία αναφοράς (ημερομηνία δημοσίευσης, ημερομηνία τελευταίας αναθεώρησης ή δημιουργίας) των εκτελεστικών διατάξεων που θεσπίζονται με το άρθρο 7 παράγραφος 1 της οδηγίας 2007/2/ΕΚ ή της προδιαγραφής."
 
 #: ckanext/publicamundi/lib/metadata/schemata/inspire_metadata.py:234
 msgid "Access Constraints"
